--- a/mod2_solution/css/styles.css
+++ b/mod2_solution/css/styles.css
@@ -18,6 +18,7 @@ p {
   border: 2px solid black;
   margin-top: 20px;
   margin-right: 20px;
+  margin-left: 20px;
   padding: 3px;
   text-align: justify;
   position: relative;
